# sintetizador-decomp

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  dev-requirements.txt  genindex.html  index.html  install.html  install.sh  main.py  objects.inv  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  sintetizador-decomp  uninstall.sh
.github/workflows/: docs.yml  main.yml  release.yml
_downloads/07104c0f3cd2372dde83018ed5912d68/: plot_sintese_politica.ipynb
_downloads/8b706179ad2c3f0270bbe061aeec8f5b/: plot_sintese_operacao.ipynb
_downloads/e1cc5c122660e279db047d91d16d4464/: plot_sintese_execucao.py
_downloads/e271fcb9224c8089f0cb0a57f6b53182/: plot_sintese_execucao.ipynb
_sources/: install.rst.txt  sg_execution_times.rst.txt
_sources/examples/: index.rst.txt  plot_sintese_execucao.rst.txt  plot_sintese_operacao.rst.txt  plot_sintese_politica.rst.txt  sg_execution_times.rst.txt
_sources/geral/: contribuicao.rst.txt  instalacao.rst.txt  tutorial.rst.txt
_sources/reference/: commands.rst.txt  model.rst.txt
_sources/referencia/: saidas.rst.txt
_static/: documentation_options.js
app/: __init__.py  app.py
app/adapters/repository/: export.py  files.py
app/domain/: commands.py
app/internal/: constants.py
app/model/: settings.py
app/model/execution/: executionsynthesis.py  infeasibility.py  inviabilidade.py  variable.py
app/model/operation/: operationsynthesis.py  spatialresolution.py  temporalresolution.py  variable.py
app/model/policy/: policysynthesis.py  unit.py
app/model/scenarios/: scenariosynthesis.py  variable.py
app/model/system/: systemsynthesis.py  variable.py
app/services/: handlers.py  unitofwork.py
app/services/deck/: accessors.py  bounds.py  bounds_data.py  context.py  deck.py  entities.py  infrastructure.py  operations.py  processing.py  reports.py  temporal.py
app/services/synthesis/: execution.py  operation.py  policy.py  scenarios.py  system.py
app/services/synthesis/operation/: __init__.py  cache.py  export.py  orchestrator.py  pipeline.py  resolution.py  spatial.py  stubs.py
app/utils/: encoding.py  fs.py  log.py  operations.py  regex.py  singleton.py  terminal.py  timing.py  tz.py
apresentacao/: apresentacao.html
docs/source/: conf.py  index.rst  sg_execution_times.rst
docs/source/apresentacao/: apresentacao.rst
docs/source/arquitetura/: arquitetura.rst
docs/source/examples/: index.rst  plot_sintese_execucao.codeobj.json  plot_sintese_execucao.ipynb  plot_sintese_execucao.py.md5  plot_sintese_execucao.rst  plot_sintese_operacao.codeobj.json  plot_sintese_operacao.ipynb  plot_sintese_operacao.py.md5  plot_sintese_operacao.rst  plot_sintese_politica.codeobj.json  plot_sintese_politica.ipynb  plot_sintese_politica.py.md5  plot_sintese_politica.rst  sg_execution_times.rst
docs/source/geral/: contribuicao.rst  instalacao.rst
docs/source/reference/: model.rst
docs/source/referencia/: api.rst  modelo.rst  saidas.rst
docs/source/referencia/api/: app.model.operation.operationsynthesis.rst  app.model.operation.spatialresolution.rst  app.model.operation.variable.rst  app.model.settings.rst
examples/: README.rst  index.html  plot_sintese_execucao.html  plot_sintese_execucao.py  plot_sintese_operacao.html  plot_sintese_operacao.py  plot_sintese_politica.html  plot_sintese_politica.py  sg_execution_times.html
examples/sintese/: CMO_SBM.parquet  CONVERGENCIA.parquet  CORTES_COEFICIENTES.parquet  CORTES_VARIAVEIS.parquet  CUSTOS.parquet  EARMF_SIN.parquet  ESTATISTICAS_OPERACAO_SIN.parquet  ESTATISTICAS_OPERACAO_UHE.parquet  METADADOS_EXECUCAO.parquet  METADADOS_OPERACAO.parquet  METADADOS_POLITICA.parquet  TEMPO.parquet  VARPF_UHE.parquet
geral/: contribuicao.html  instalacao.html  tutorial.html
reference/: commands.html  model.html
referencia/: modelo.html  saidas.html
sintetizador/: app.py
sintetizador/adapters/repository/: export.py  files.py
sintetizador/domain/: commands.py
sintetizador/model/: settings.py
sintetizador/model/execution/: inviabilidade.py  variable.py
sintetizador/model/operation/: temporalresolution.py  variable.py
sintetizador/model/scenarios/: scenariosynthesis.py
sintetizador/services/: handlers.py  unitofwork.py
sintetizador/services/deck/: deck.py
sintetizador/services/synthesis/: execution.py  operation.py  scenarios.py  system.py
sintetizador/utils/: encoding.py  terminal.py
tests/: conftest.py
tests/app/adapters/repository/: test_export.py  test_files.py
tests/app/services/: test_unitofwork.py
tests/app/services/synthesis/: test_execution.py  test_operation.py  test_policy.py  test_system.py
tests/app/utils/: test_operations.py
tests/mocks/arquivos/: avl_turb_max.csv  dadger.rv0  dadgnl.rv0  dec_eco_discr.csv  dec_fcf_cortes_001.rv0  dec_fcf_cortes_002.rv0  dec_fcf_cortes_003.rv0  dec_fcf_cortes_004.rv0  dec_fcf_cortes_005.rv0  dec_oper_gnl.csv  dec_oper_interc.csv  dec_oper_ree.csv  dec_oper_sist.csv  dec_oper_usih.csv  dec_oper_usit.csv  decomp.tim  inviab_unic.rv0  relato.rv0  relato2.rv0  relgnl.rv0  vazoes.rv0
tests/sintetizador/adapters/repository/: test_files.py
tests/sintetizador/services/: test_unitofwork.py
tests/sintetizador/services/synthesis/: test_execution.py  test_operation.py  test_system.py
