[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sintetizador-decomp"
dynamic = ["version"]
dependencies = [
    "pandas",
    "polars>=1.0.0",
    "pyarrow>=18.0.0",
    "click>=8.1.7",
    "idecomp>=1.9.0",
]
requires-python = ">= 3.11"
authors = [
  {name = "Rogerio Alves", email = "rogerioalves.ee@gmail.com"},
]
description = "sintetizador-decomp"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "mypy",
    "types-python-dateutil",
    "furo",
    "sphinx-gallery",
    "sphinx",
    "numpydoc",
    "plotly",
    "matplotlib",
]

[project.urls]
Documentation = "https://rjmalves.github.io/sintetizador-decomp/"
Repository = "https://github.com/rjmalves/sintetizador-decomp/"

[project.scripts]
sintetizador-decomp = "main:main"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "main.py",
  "app/",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["idecomp.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["cfinterface.*"]
ignore_errors = true

# idecomp v1.9+ .read() classmethods return base types (SectionFile,
# BlockFile, RegisterFile) instead of Self, causing many false-positive
# errors throughout this module. Additionally, idecomp attributes such as
# arq_caso.arquivos return Any, causing no-any-return in typed properties;
# and Settings.installdir is Optional[str] passed to pathlib.Path (arg-type).
[[tool.mypy.overrides]]
module = ["app.adapters.repository.files"]
disable_error_code = ["assignment", "return-value", "attr-defined", "unused-ignore", "no-any-return", "arg-type"]

[[tool.mypy.overrides]]
module = ["dateutil.*"]
ignore_errors = true

# Deck class uses a Dict[str, Any] cache to store heterogeneous typed values
# (datetime, int, list[datetime], list[int]). Returning cache entries typed as
# Any in methods with specific return types generates false-positive no-any-return
# errors that cannot be resolved without refactoring the caching architecture.
[[tool.mypy.overrides]]
module = ["app.services.deck.deck"]
disable_error_code = ["no-any-return"]

# pandas .at[], .iloc[], and .to_numpy().flatten() return Any regardless of
# the DataFrame's dtype, causing false-positive no-any-return in helper
# functions that delegate entirely to pandas internal indexing.
[[tool.mypy.overrides]]
module = ["app.services.deck.processing"]
disable_error_code = ["no-any-return"]

# infeasibility.py is a legacy parsing module with many _build_* classmethods
# that share the same untyped parameter pattern (iteration, stage, scenario,
# constraint_message, violation, unit, hidr). The hidr parameter is typed via
# idecomp (already suppressed in idecomp.*). The no-untyped-def, type-arg, and
# no-any-return errors are systemic across all builder methods and cannot be
# resolved without full annotation of idecomp.decomp.hidr return types.
[[tool.mypy.overrides]]
module = ["app.model.execution.infeasibility"]
disable_error_code = ["no-untyped-def", "type-arg", "no-any-return"]
